--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:srcCompat="@drawable/add" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_chat"
+        android:id="@+id/newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -43,12 +43,11 @@
         android:backgroundTint="@color/background_tab_pressed"
         android:clickable="true"
         android:elevation="10dp"
-        android:translationY="-65dp"
         app:fabCustomSize="55dp"
         app:srcCompat="@drawable/baseline_person_add_white_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_group"
+        android:id="@+id/newGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -56,7 +55,6 @@
         android:backgroundTint="@color/background_tab_pressed"
         android:clickable="true"
         android:elevation="10dp"
-        android:translationY="-130dp"
         app:fabCustomSize="55dp"
         app:srcCompat="@drawable/baseline_group_add_white_36" />
 
