--- a/app/src/main/res/layout/list_item_main.xml
+++ b/app/src/main/res/layout/list_item_main.xml
@@ -58,6 +58,20 @@
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
+        <ImageView
+                android:id="@+id/group_thumbnail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/round_text"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dip"
+                app:srcCompat="@drawable/baseline_people_white_24"
+                android:visibility="gone" />
+
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
