--- a/app/src/main/res/layout/create_group_name.xml
+++ b/app/src/main/res/layout/create_group_name.xml
@@ -27,14 +27,13 @@
             app:layout_constraintTop_toBottomOf="@+id/phone_number">
 
             <EditText
-                android:id="@+id/group_name"
+                android:id="@+id/name"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/edit_text_bg"
                 android:hint="@string/add_group_name"
-                android:inputType="number"
                 android:padding="12dp"
                 android:textColor="@android:color/white"
                 android:textColorHint="@color/colorAccent"
