--- a/app/src/main/res/layout/list_item_group_share.xml
+++ b/app/src/main/res/layout/list_item_group_share.xml
@@ -18,7 +18,7 @@
         android:focusable="true">
 
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
