--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="st_145">-157dp</dimen>
     <dimen name="st_130">-130dp</dimen>
     <dimen name="st_65">-65dp</dimen>
+    <dimen name="appbar_padding">16dp</dimen>
 
 </resources>
