--- a/app/src/main/res/layout/receive_msg.xml
+++ b/app/src/main/res/layout/receive_msg.xml
@@ -36,7 +36,7 @@
             android:padding="10dp">
 
             <include
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 layout="@layout/message_received_reply_layout"/>
 
@@ -59,7 +59,6 @@
                 android:text="11:15 PM" />
 
         </LinearLayout>
-
 
     </RelativeLayout>
 
