--- a/app/src/main/res/layout/delete_check_box.xml
+++ b/app/src/main/res/layout/delete_check_box.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <CheckBox
         android:id="@+id/delete"
         android:layout_width="match_parent"
         android:padding="8dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         android:layout_height="wrap_content"
         android:text="@string/delete_media" />
-</FrameLayout>
+</LinearLayout>
