--- a/app/src/main/res/layout/message_sent_reply_layout.xml
+++ b/app/src/main/res/layout/message_sent_reply_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/reply_send_layout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:background="@drawable/reply_background"
@@ -19,10 +19,20 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/messag"
+        style="@style/chat_text_message_style"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        android:autoLink="web"
+        android:paddingRight="6dp"
+        android:text="."
+        android:textColor="#ccffffff" />
+
+    <TextView
         android:id="@+id/reply_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxWidth="180dp"
         android:text="Test view here"
         android:textColor="#A3A3A3" />
 </LinearLayout>
