--- a/app/src/main/res/layout/receive_image.xml
+++ b/app/src/main/res/layout/receive_image.xml
@@ -44,7 +44,8 @@
 
         <RelativeLayout
                 android:layout_width="300dp"
-                android:layout_height="300dp">
+                android:layout_height="300dp"
+                android:layout_marginTop="10dp">
 
                 <ImageView
                     android:id="@+id/main"
