--- a/app/src/main/res/layout/activity_share_tabbed.xml
+++ b/app/src/main/res/layout/activity_share_tabbed.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainBackground">
@@ -18,6 +17,7 @@
             android:gravity="center"
             android:minHeight="?actionBarSize"
             android:text="@string/share"
+            android:paddingStart="20dp"
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
 
         <com.google.android.material.tabs.TabLayout
