--- a/app/src/main/res/layout/send_msg.xml
+++ b/app/src/main/res/layout/send_msg.xml
@@ -59,8 +59,7 @@
                     style="@style/chat_timings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:text="11:15 PM" />
+                    android:layout_marginEnd="5dp" />
 
                 <ImageView
                     android:id="@+id/sent"
