--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -9,8 +9,6 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-
     <RelativeLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
@@ -60,7 +58,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/participants"/>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/exit_group"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#E10000"
+        android:id="@+id/exitGroup"/>
 
 </LinearLayout>
