--- a/app/src/main/res/drawable/list_selector.xml
+++ b/app/src/main/res/drawable/list_selector.xml
@@ -1,15 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:state_selected="false"
-        android:state_pressed="false"
-        android:drawable="@drawable/gradient_bg"/>
-    <item
-        android:state_pressed="true"
-        android:drawable="@drawable/gradient_bg_hover"/>
-    <item
-        android:state_selected="true"
-        android:state_pressed="false"
-        android:drawable="@drawable/gradient_bg_hover"/>
-
+    <item android:state_focused="true" android:state_pressed="false" android:drawable="@drawable/plain" />
+    <item android:state_focused="true" android:state_pressed="true" android:drawable="@drawable/gradient" />
+    <item android:state_focused="false" android:state_pressed="true" android:drawable="@drawable/gradient" />
+    <item android:drawable="@drawable/plain" />
 </selector>
