--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -53,7 +53,7 @@
                 android:src="@drawable/baseline_attachment_white_24"
                 android:tint="#FFFFFF" />
 
-        
+
 
         <LinearLayout
             android:layout_width="0dp"
@@ -67,55 +67,74 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <LinearLayout
-                android:id="@+id/chat_reply"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/reply_receive_background"
-                android:orientation="vertical"
-                android:padding="10dp"
-                android:visibility="gone">
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:id="@+id/chat_reply">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
-                    android:gravity="right"
-                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/reply_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
-                        android:text="You"
-                        android:textColor="#000833"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:id="@+id/view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1" />
-
-                    <ImageButton
-                        android:id="@+id/close_reply"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:rotation="45"
-                        app:srcCompat="@drawable/add" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/reply_message"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxWidth="180dp"
-                    android:text="Test view here"
-                    android:textColor="#A3A3A3" />
-            </LinearLayout>
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/reply_receive_background"
+                    android:orientation="vertical"
+                    android:padding="10dp"
+                    android:id="@+id/cc"
+                    android:visibility="visible">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="3dp"
+                        android:gravity="right"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/reply_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:text="You"
+                            android:textColor="#000833"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:id="@+id/view"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/reply_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxWidth="180dp"
+                        android:text="Test view here"
+                        android:textColor="#A3A3A3" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/cc"
+                    android:id="@+id/thumbnail"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="10dp"
+                    android:contentDescription="@string/image_reply_thumbnail" />
+
+                <ImageButton
+                    android:id="@+id/close_reply"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_margin="8dp"
+                    android:rotation="45"
+                    android:layout_alignParentEnd="true"
+                    app:srcCompat="@drawable/add" />
+            </RelativeLayout>
 
             <EditText
                 android:id="@+id/chat_edit_text"
