--- a/app/src/main/res/layout/create_group_name.xml
+++ b/app/src/main/res/layout/create_group_name.xml
@@ -23,8 +23,7 @@
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phone_number">
+            app:layout_constraintStart_toStartOf="parent">
 
             <EditText
                 android:id="@+id/name"
