--- a/app/src/main/res/layout/group_message_info_item.xml
+++ b/app/src/main/res/layout/group_message_info_item.xml
@@ -3,37 +3,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/mainBackground"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        android:background="@drawable/gradient_bg"
+        android:clickable="true"
+        android:focusable="true"
         android:orientation="horizontal"
-        android:weightSum="100"
-        android:baselineAligned="false">
+        android:padding="13dp">
 
         <RelativeLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="50"
             android:background="@drawable/gradient_bg"
             android:clickable="true"
             android:focusable="true"
             android:orientation="horizontal"
-            android:padding="13dp"
-            android:textAlignment="center">
+            android:padding="10dp">
 
+            <TextView
+                android:id="@+id/thumbnail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/round_text"
+                android:backgroundTint="#3F51B5"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="3dip"
+                android:text="A"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/thumbnail"
+                android:layout_toEndOf="@id/thumbnail"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:typeface="sans" />
+
+            <TextView
+                android:id="@+id/number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/name"
+                android:layout_marginTop="7dp"
+                android:layout_toEndOf="@id/thumbnail"
+                android:textColor="@color/main_screen_normal"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/container"
+            android:visibility="visible">
 
             <LinearLayout
-                android:id="@+id/read_layout"
+                android:id="@+id/read_component"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="5dp">
 
                 <TextView
                     android:id="@+id/read_image"
@@ -49,44 +94,21 @@
                     android:id="@+id/read_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/read"
-                    android:textAlignment="center"
+                    android:text="--"
                     android:textColor="#ffffff"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:typeface="sans" />
+
             </LinearLayout>
 
-
-            <TextView
-                android:id="@+id/read"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/read_layout"
-                android:layout_marginTop="7dp"
-                android:textAlignment="center"
-                android:textColor="@color/main_screen_normal"
-                android:textSize="16sp" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="50"
-            android:background="@drawable/gradient_bg"
-            android:clickable="true"
-            android:focusable="true"
-            android:orientation="horizontal"
-            android:padding="13dp">
-
             <LinearLayout
-                android:id="@+id/deliver_layout"
+                android:id="@+id/deliver_component"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_below="@id/read_component"
+                android:orientation="horizontal"
+                android:padding="5dp">
 
                 <TextView
                     android:id="@+id/deliver_image"
@@ -103,34 +125,12 @@
                     android:id="@+id/deliver_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/delivered"
-                    android:textAlignment="center"
+                    android:text="--"
                     android:textColor="#ffffff"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:typeface="sans" />
             </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/deliver"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/deliver_layout"
-                android:layout_marginTop="7dp"
-                android:textAlignment="center"
-                android:textColor="@color/main_screen_normal"
-                android:textSize="16sp" />
-
         </RelativeLayout>
-
-    </LinearLayout>
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listView"
-        android:padding="10dp"/>
-
-
+    </RelativeLayout>
 </LinearLayout>
