--- a/app/src/main/res/layout/message_received_reply_layout.xml
+++ b/app/src/main/res/layout/message_received_reply_layout.xml
@@ -1,39 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/reply_receive_layout"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/reply_receive_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:background="@drawable/reply_receive_background"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="10dp"
     android:visibility="visible"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:maxLines="1"
-        android:text="you"
-        android:textColor="#000833"
-        android:textStyle="bold" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:maxLines="1"
+            android:text="you"
+            android:textColor="#000833"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/messag"
-        style="@style/chat_text_message_style"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="invisible"
-        android:autoLink="web"
-        android:paddingStart="6dp"
-        android:textColor="#CCFFFFFF" />
+        <TextView
+            android:id="@+id/messag"
+            style="@style/chat_text_message_style"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            android:autoLink="web"
+            android:paddingStart="6dp"
+            android:textColor="#CCFFFFFF"
+            tools:ignore="RtlSymmetry" />
 
-    <TextView
-        android:id="@+id/reply_text"
-        android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/reply_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="message text"
+            android:textColor="#A3A3A3" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:text="message text"
-        android:textColor="#A3A3A3" />
-</LinearLayout>
+        android:visibility="gone"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/thumbnail"
+        android:contentDescription="@string/image_reply_thumbnail" />
+
+</RelativeLayout>
