--- a/app/src/main/res/layout/message_sent_reply_layout.xml
+++ b/app/src/main/res/layout/message_sent_reply_layout.xml
@@ -1,38 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/reply_send_layout"
+<RelativeLayout android:id="@+id/reply_send_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:background="@drawable/reply_background"
-    android:orientation="vertical"
     android:padding="10dp"
-    android:visibility="gone"
+    android:visibility="visible"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:text="TextView"
-        android:textColor="#000833"
-        android:textStyle="bold" />
+        android:id="@+id/container"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:text="TextView"
+            android:textColor="#000833"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/messag"
-        style="@style/chat_text_message_style"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="invisible"
-        android:autoLink="web"
-        android:paddingRight="6dp"
-        android:text="."
-        android:textColor="#ccffffff" />
+        <TextView
+            android:id="@+id/messag"
+            style="@style/chat_text_message_style"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            android:autoLink="web"
+            android:paddingRight="6dp"
+            android:text="."
+            android:textColor="#ccffffff" />
 
-    <TextView
-        android:id="@+id/reply_text"
-        android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/reply_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Test view here"
+            android:textColor="#A3A3A3" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test view here"
-        android:textColor="#A3A3A3" />
-</LinearLayout>
+        android:visibility="gone"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/container"
+        android:id="@+id/thumbnail"
+        android:contentDescription="@string/image_reply_thumbnail" />
+
+</RelativeLayout>
