--- a/app/src/main/res/layout/group_receive_message.xml
+++ b/app/src/main/res/layout/group_receive_message.xml
@@ -8,12 +8,12 @@
     android:id="@+id/container"
     android:layout_marginTop="5dp">
 
-    <include layout="@layout/message_options_layout"/>
+    <include layout="@layout/message_options_layout_received"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/message_reply_margin_bottom"
         android:background="@color/mainBackground">
 
         <ImageView
@@ -33,7 +33,7 @@
             android:layout_marginEnd="60dp"
             android:background="@drawable/to_msg_background"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/message_padding">
 
             <TextView
                 android:id="@+id/userName"
@@ -45,7 +45,7 @@
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="2dp"
                 android:paddingBottom="3dp"
-                android:textSize="16sp"/>
+                android:textSize="@dimen/message_text_size"/>
 
             <include
                 android:layout_width="wrap_content"
@@ -58,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoLink="web"
+                android:textSize="@dimen/message_text_size"
                 android:paddingStart="6dp"
                 android:textColor="#CCFFFFFF" />
 
@@ -66,6 +67,7 @@
                 style="@style/chat_timings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/message_time_size"
                 android:layout_gravity="bottom|right"
                 android:paddingEnd="5dp"
                 android:text="11:15 PM" />
