--- a/app/src/main/res/layout/receive_msg.xml
+++ b/app/src/main/res/layout/receive_msg.xml
@@ -8,7 +8,7 @@
     android:id="@+id/container"
     android:layout_marginTop="5dp">
 
-    <include layout="@layout/message_options_layout"/>
+    <include layout="@layout/message_options_layout_received"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
             android:layout_marginEnd="60dp"
             android:background="@drawable/to_msg_background"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/message_padding">
 
             <include
                 android:layout_width="wrap_content"
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoLink="web"
+                android:textSize="@dimen/message_text_size"
                 android:paddingStart="6dp"
                 android:textColor="#CCFFFFFF" />
 
@@ -54,6 +55,7 @@
                 style="@style/chat_timings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/message_time_size"
                 android:layout_gravity="bottom|right"
                 android:paddingEnd="5dp"
                 android:text="11:15 PM" />
