--- a/app/src/main/res/layout/send_image.xml
+++ b/app/src/main/res/layout/send_image.xml
@@ -10,14 +10,13 @@
     tools:ignore="ContentDescription"
     android:layout_marginTop="5dp">
 
-    <include layout="@layout/message_options_layout"/>
+    <include layout="@layout/message_options_layout_sent"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@color/mainBackground">
-        
         
         <ImageView
             android:id="@+id/triangle"
@@ -38,7 +37,7 @@
             android:layout_marginEnd="15dp"
             android:background="@drawable/from_msg_background"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/message_padding">
 
             <include
                 android:layout_width="match_parent"
@@ -76,6 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
+                    android:textSize="@dimen/message_time_size"
                     android:text="11:15 PM" />
 
                 <View
