--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/colorPrimary"
-    android:radius="50dp"
-    tools:targetApi="lollipop">
-    <item>
-        <shape android:shape="rectangle">
+
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
             <solid android:color="#202020" />
             <corners android:radius="8dp" />
-        </shape>
-    </item>
+</shape>
 
-</ripple>
+
