--- a/app/src/main/res/layout/activity_message_info.xml
+++ b/app/src/main/res/layout/activity_message_info.xml
@@ -8,10 +8,21 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <include layout="@layout/send_image"
+        android:visibility="gone"
+        android:id="@+id/image"/>
+    <include layout="@layout/send_msg"
+        android:visibility="gone"
+        android:id="@+id/text"/>
+    <include layout="@layout/send_file"
+        android:visibility="gone"
+        android:id="@+id/file"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:weightSum="100"
         android:baselineAligned="false">
 
@@ -37,8 +48,8 @@
 
                 <TextView
                     android:id="@+id/read_image"
-                    android:layout_width="35dp"
-                    android:layout_height="25dp"
+                    android:layout_width="25dp"
+                    android:layout_height="15dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/message_got_read_receipt_from_target"
                     android:gravity="center"
@@ -90,8 +101,8 @@
 
                 <TextView
                     android:id="@+id/deliver_image"
-                    android:layout_width="35dp"
-                    android:layout_height="25dp"
+                    android:layout_width="25dp"
+                    android:layout_height="15dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/message_got_receipt_from_target"
                     android:backgroundTint="#BFBFBF"
