--- a/app/src/main/res/layout/create_group_icon_click_dialog.xml
+++ b/app/src/main/res/layout/create_group_icon_click_dialog.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient_bg"
+        android:background="@color/black"
         android:clickable="true"
         android:orientation="horizontal"
         android:id="@+id/container"
