--- a/app/src/main/res/layout/group_message_info_item.xml
+++ b/app/src/main/res/layout/group_message_info_item.xml
@@ -16,17 +16,16 @@
         android:clickable="true"
         android:focusable="true"
         android:orientation="horizontal"
-        android:padding="13dp">
+        android:padding="5dp">
 
         <RelativeLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/gradient_bg"
             android:clickable="true"
             android:focusable="true"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/thumbnail"
@@ -78,15 +77,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/read_image"
-                    android:layout_width="35dp"
-                    android:layout_height="25dp"
+                    android:layout_width="25dp"
+                    android:layout_height="15dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/message_got_read_receipt_from_target"
-                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="3dp" />
 
@@ -96,7 +95,8 @@
                     android:layout_height="wrap_content"
                     android:text="--"
                     android:textColor="#ffffff"
-                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     android:typeface="sans" />
 
@@ -108,16 +108,16 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/read_component"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/deliver_image"
-                    android:layout_width="35dp"
-                    android:layout_height="25dp"
+                    android:layout_width="25dp"
+                    android:layout_height="15dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/message_got_receipt_from_target"
                     android:backgroundTint="#BFBFBF"
-                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="3dp" />
 
@@ -127,7 +127,8 @@
                     android:layout_height="wrap_content"
                     android:text="--"
                     android:textColor="#ffffff"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
+                    android:layout_gravity="center_vertical"
                     android:textStyle="bold"
                     android:typeface="sans" />
             </LinearLayout>
