--- a/app/src/main/res/layout/group_receive_file.xml
+++ b/app/src/main/res/layout/group_receive_file.xml
@@ -10,7 +10,7 @@
     tools:ignore="ContentDescription"
     android:layout_marginTop="5dp">
 
-    <include layout="@layout/message_options_layout"/>
+    <include layout="@layout/message_options_layout_received"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,7 +35,7 @@
             android:layout_marginEnd="60dp"
             android:background="@drawable/to_msg_background"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/message_padding">
 
             <TextView
                 android:id="@+id/userName"
@@ -47,7 +47,7 @@
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="2dp"
                 android:paddingBottom="3dp"
-                android:textSize="16sp"/>
+                android:textSize="@dimen/message_text_size"/>
 
             <include
                 android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/file_background"
-                android:padding="8dp">
+                android:padding="@dimen/message_padding">
 
                 <ImageView
                     android:id="@+id/file_icon"
@@ -83,7 +83,7 @@
                     android:layout_weight="1"
                     android:text="app-debu.apk app-"
                     android:textColor="#FFFFFF"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/message_text_size" />
 
                 <ImageButton
                     android:id="@+id/download_file"
@@ -117,6 +117,7 @@
                 <TextView
                     android:id="@+id/file_type"
                     style="@style/chat_timings"
+                    android:textSize="@dimen/message_text_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|left"
@@ -131,6 +132,7 @@
                 <TextView
                     android:id="@+id/time"
                     style="@style/chat_timings"
+                    android:textSize="@dimen/message_time_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|right"
