--- a/app/src/main/res/layout/list_item_group_share.xml
+++ b/app/src/main/res/layout/list_item_group_share.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_gravity="center_vertical"
+    android:layout_marginTop="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:layout_marginTop="5dp">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gradient_bg"
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:id="@+id/container"
-        android:padding="13dp"
-        android:focusable="true">
+    android:background="@drawable/list_selector"
+    android:clickable="true"
+    android:orientation="horizontal"
+    android:id="@+id/container"
+    android:padding="13dp"
+    android:focusable="true">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/thumbnail"
+            android:layout_toEndOf="@id/thumbnail"
             android:text="Username"
             android:textColor="#ffffff"
             android:textSize="18sp"
@@ -33,14 +28,12 @@
             android:id="@+id/thumbnail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/round_text"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="10dip"
             app:srcCompat="@drawable/baseline_people_white_24" />
-
-    </RelativeLayout>
 </RelativeLayout>
