--- a/app/src/main/res/layout/message_sent_reply_layout.xml
+++ b/app/src/main/res/layout/message_sent_reply_layout.xml
@@ -2,9 +2,9 @@
 <RelativeLayout android:id="@+id/reply_send_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_marginBottom="@dimen/message_reply_margin_bottom"
     android:background="@drawable/reply_background"
-    android:padding="10dp"
+    android:padding="@dimen/message_padding"
     android:visibility="visible"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:text="TextView"
+            android:textSize="@dimen/message_text_size"
             android:textColor="#000833"
             android:textStyle="bold" />
 
@@ -29,6 +30,7 @@
             android:layout_height="0dp"
             android:visibility="invisible"
             android:autoLink="web"
+            android:textSize="@dimen/message_text_size"
             android:paddingRight="6dp"
             android:text="."
             android:textColor="#ccffffff" />
