--- a/app/src/main/res/layout/receive_file.xml
+++ b/app/src/main/res/layout/receive_file.xml
@@ -10,7 +10,7 @@
     tools:ignore="ContentDescription"
     android:layout_marginTop="5dp">
 
-    <include layout="@layout/message_options_layout"/>
+    <include layout="@layout/message_options_layout_received"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,7 +35,7 @@
             android:layout_marginEnd="60dp"
             android:background="@drawable/to_msg_background"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/message_padding">
 
             <include
                 android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/file_background"
-                android:padding="8dp">
+                android:padding="@dimen/message_padding">
 
                 <ImageView
                     android:id="@+id/file_icon"
@@ -69,9 +69,8 @@
                     android:layout_marginEnd="5dp"
                     android:layout_toRightOf="@id/file_icon"
                     android:layout_weight="1"
-                    android:text="app-debu.apk app-"
                     android:textColor="#FFFFFF"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/message_text_size" />
 
                 <ImageButton
                     android:id="@+id/download_file"
@@ -106,6 +105,7 @@
                     android:id="@+id/file_type"
                     style="@style/chat_timings"
                     android:layout_width="wrap_content"
+                    android:textSize="@dimen/message_text_size"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|left"
                     android:text="File type" />
@@ -121,13 +121,11 @@
                     style="@style/chat_timings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/message_time_size"
                     android:layout_gravity="bottom|right"
                     android:paddingEnd="5dp"
                     android:text="11:15 PM" />
             </LinearLayout>
-
         </LinearLayout>
-
     </RelativeLayout>
-
 </com.leagueofshadows.enc.SwipeRevealLayout>
